--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,10 @@ html {
 body {
   background-color: #12192b;
 }
-
+/*
 div {
   border: 1px solid chocolate;
-}
+}*/
 
 
 /**universal**/
@@ -26,9 +26,14 @@ div {
 
 
 .top-nav {
+  padding-top: 15px;
+  padding-bottom: 15px;
   width: 100%;
   text-align: center;
-  border: 1px solid white;
+  /*border: 1px solid white;*/
+  position: fixed;
+  z-index: 100;
+  background-color: #12192b;
 
 }
 
@@ -39,17 +44,40 @@ div {
 /**ig pics**/
 
 .ig-container {
+  padding-top: 140px;
   width: 100%;
-  border: 1px solid white;
+  /*border: 1px solid white;*/
+  text-align: center;
 }
 
 .box {
-  overflow: auto;
-  display: inline-block;
-  width: 33.33333%;
+  overflow: hidden;
+  display: inline;
+  width: 33.3333333%;
+  margin: 0 auto;
+  float: left;
+  padding: 5px;
 }
 
-.pic-size {
+.pic {
+  width: 100%;
+  height: 100%;
+}
+
+/*.box:hover {
+  background-color: black;
+}*/
+
+/*.pic-size {
   width: 33.33333%;
 
+}*/
+
+
+/** media query **/
+
+@media (max-width: 720px) {
+  .box {
+    width: 50%;
+  }
 }
