--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ div {
 }
 
 
+
 .pic {
   width: 100%;
   height: 100%;
@@ -81,8 +82,9 @@ div {
   margin: 0;
   top: 40%;
   left:0;
-  padding: 0 50px;
+  padding: 0 25px;
   color: #fffeff;
+  width: 100%;
 
 }
 
